syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.location";
option java_outer_classname = "locationServiceImpl";

package location;

service locationService {
	// Unary RPC
	rpc locationsOnOff (locationRequest) returns (locationResponse) {};
}

message locationRequest {
	bool switch = 1;
}

message locationResponse {
	bool switch = 1;
}